tests/codegen/fail/interface/struct/derive_fields_duplicate.stderr
error: GraphQL interface must have a different name for each field
       · note: https://spec.graphql.org/October2021#sec-Interfaces

 --> fail/interface/struct/derive_fields_duplicate.rs:4:1
  |
4 | struct Character {
  | ^^^^^^
